--- a/style.css
+++ b/style.css
@@ -1,18 +1,61 @@
 body {
-box-sizing: border-box;
+
 }
 
+/* NAV */
 nav {
   background-color: lightblue;
   width: 100%;
-  height: 100px;
+  height: 200px;
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
 }
 
 .logo {
-  background-color: coral;
+ background-color: lightgreen;
+ width: 300px;
+ height: 130px;
 
 }
 
+.logo>img {
+  width: 80px;
+
+}
+
+.logo>h1 {
+  background-color: pink;
+  float: right;
+  
+}
+
+.logo>p {
+  background-color: yellow;
+  float: right;
+  padding: 10px;
+}
+
+.social {
+  width: 200px;
+  height: 200px;
+  background-color: purple;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* div container with the list background */
 .list {
   background-image: url('img/list-bg.png');
   width: 80%;
