--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 body {
 
+  width: 1100px;
+  margin: 0 auto;
+
 }
+
+
+main {
+
+}
+
+
 
 /* NAV */
 nav {
@@ -45,9 +55,8 @@ nav {
 
 
 h2 {
-  font-style: normal;
-  font-size: large;
-
+  font-size: 55px;
+  font-weight: bold;
 }
 
 h3 {
@@ -57,11 +66,16 @@ h3 {
 .print {
   background-color: lightgreen;
   float: right;
+  font-size:
 }
 
 .p {
   background-color: lightseagreen;
-  text-size-adjust: inherit ;
+  
+}
+
+hr {
+  background-color: grey;
 }
 
 
@@ -75,6 +89,6 @@ h3 {
 /* div container with the list background */
 .list {
   background-image: url('img/list-bg.png');
-  width: 80%;
   height: 300px;
+  text-align: center;
 }
